--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -12,3 +12,5 @@ jobs:
         uses: ./.github/actions/hello-world
         with:
           firstGreeting: "Learning Lab User"
+          secondGreeting: "Learning Lab User"
+          thirdGreeting: "Learning Lab User"
