--- a/.github/actions/issue-maker/Dockerfile
+++ b/.github/actions/issue-maker/Dockerfile
@@ -2,7 +2,7 @@ FROM node:slim
 
 COPY package*.json ./
 
-RUN apt-get update && apt-get install yarn && yarn
+RUN apt-get update && apt-get install -y yarn && yarn
 
 COPY . .
 
